# Patpat-viewer

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
patpat-viewer/: checker.py  env.py  filter.py  finisher.py  sorter.py  utility.py  viewer.py
patpat-viewer/static/: test.css
patpat-viewer/templates/: Contact.html  Dataset.html  Empty.html  Home.html  Search.html  Task.html  Taskbar.html  base.html  dataset_card.html  macro.html  test.html  test2.html
patpat_env/logs/: tasks.json
patpat_env/result/3a25a0e5-8e01-4283-b2b5-5b79db3e921d/: result.tsv
patpat_env/result/3d5b4e1d-937c-4661-83a2-b6ed7c19f060/: config.json  result.tsv
patpat_viewer/: __init__.py  checker.py  env.py  filter.py  finisher.py  sorter.py  utility.py  viewer.py
patpat_viewer/patpat_env/logs/: tasks.json
patpat_viewer/patpat_env/result/3a25a0e5-8e01-4283-b2b5-5b79db3e921d/: config.json  result.json
patpat_viewer/patpat_env/result/8a7bbe2d-a421-4496-bcbb-df0f3e9f008b/: config.json
patpat_viewer/patpat_env/result/c614aee3-89a0-45dd-aa22-78b49648d358/: config.json  result.tsv
patpat_viewer/templates/: 404.html  About.html  Contact.html  Dataset.html  Empty.html  Home.html  Task.html  TaskTable.html  base.html  macro.html  test.html
tests/: test_filter.py  test_search.py  test_server.py
