[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "patpat-viewer"
version = "0.0.0"
authors = [
    { name = "Weiheng Liao", email = "weiheng_liao@outlook.com" },
    { name = "Minyan Mo", email = "ixxssue@outlook.com"}
]
description = "A viewer for Patpat"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask",
    "bootstrap-flask>=2.1.0",
]
license = {text = "Apache 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/henry-leo/Patpat-viewer"
"Bug Tracker" = "https://github.com/henry-leo/Patpat-viewer/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["patpat_env"]